config/kibana/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
    component: kibana
  name: kibana
  namespace: logging
spec:
  selector:
    app: kibana
    component: kibana
  ports:
#  - port: 5601
#    protocol: TCP
#    targetPort: 8080
  - nodePort: 31111
    port: 5602
    protocol: TCP
    targetPort: 5602
  type: ClusterIP
